--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>Analog Project - HSM</title>
     <link rel="stylesheet" href="style.css">
     <script src="./script.js" defer></script>
-    
 </head>
 <body>
     <div class="container">
